--- a/app/globals.css
+++ b/app/globals.css
@@ -18,8 +18,6 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-  overflow: visible !important;
-  padding-right: 0 !important;
 }
 /* styles/globals.css */
 body {
@@ -187,7 +185,7 @@ body {
   border-bottom: 3px solid #ffac00;
   font-weight: bold;
   color: white;
-  text-align: left;
+  /* text-align: left; */
   width: 150px;
 }
 .mainHeaders {
@@ -218,4 +216,9 @@ body {
   /* width: 200px; */
   box-shadow: -5px 5px 10px 0px #47a8961f;
   padding: 15px 25px;
+}
+
+/* Border color for completed and current projects */
+.borderColorCompleteds {
+  border-color: rgba(71, 168, 150, 0.3);
 }
